Fix spacing bug

--- a/web/src/components/layout.module.css
+++ b/web/src/components/layout.module.css
@@ -3,6 +3,11 @@
 
 .content {
   min-height: calc(100vh - 90px);
+  margin-bottom: -150px;
+}
+
+.contentSticky {
+  margin-bottom: unset;
 }
 
 .footer {
@@ -15,17 +20,18 @@
   color: var(--color-white);
   transform: translateY(100%);
   transition: transform 400ms ease-in;
-  margin-top: -150px;
+  /* margin-top: -60px; */
 
   @media (max-width: 800px) {
     height: 150px;
+    /* margin-top: -150px; */
   }
 }
 
 .sticky {
   position: sticky;
   transform: translateY(0);
-  margin-top: unset;
+  /* margin-top: unset; */
   bottom: 0;
   left: 0;
 }
